fix: spacings, add: button hover effects

--- a/styles/style.css
+++ b/styles/style.css
@@ -87,6 +87,7 @@ picture {
     --clr-white: hsl(0, 0%, 100%);
     --gradient-pink: linear-gradient(to top, hsl(322, 87%, 55%), hsl(13, 100%, 64%));
     --gradient-purple: linear-gradient(to bottom, hsl(237, 100%, 64%), hsl(322, 87%, 55%));
+    --gradient-purple-light: linear-gradient(to bottom, hsl(237, 100%, 74%), hsl(322, 87%, 65%));
 
     /* TYPOGRAPHY */
     --ff-main: "Plus Jakarta Sans", sans-serif;
@@ -138,6 +139,7 @@ body {
   border-radius: var(--rounded-28);
   padding-block: clamp(0.6563rem, 1.328rem + -1.3995vw, 1rem);
   padding-inline: clamp(1.5rem, 2.4771rem + -2.0356vw, 2rem);
+  transition: opacity 300ms, background-color 300ms;
 }
 
 .btn:hover {
@@ -162,8 +164,12 @@ body {
   background: var(--gradient-purple);
 }
 
+.btn--purple:hover {
+  opacity: 1;
+  background: var(--gradient-purple-light);
+}
+
 .header, .main, .footer {
-  /* width: 100%; */
   padding-inline: clamp(var(--space-250), -0.1813rem + 6.1069vw, var(--space-550));
 }
 
@@ -215,6 +221,9 @@ body {
 }
 
 .course {
+  display: flex;
+  flex-direction: column;
+  gap: var(--space-300);
   position: relative;
   padding: var(--space-800) var(--space-400) var(--space-500);
   border-radius: var(--rounded-15);
@@ -232,17 +241,13 @@ body {
   font-size: clamp(1.25rem, 0.9643rem + 0.5952vw, 1.5rem);
   font-weight: 800;
   color: var(--clr-blue-900);
-  margin-block-end: var(--space-300);
-}
-
-.course__description {
-  margin-block-end: var(--space-300);
 }
 
 .course__link {
   font-weight: 700;
   text-decoration: none;
   color: var(--clr-pink-600);
+  margin-block-start: auto;
 }
 
 .footer {
@@ -262,14 +267,16 @@ body {
     gap: var(--space-300);
     align-items: center;
     position: relative;
-    max-height: 34rem;
-    height: 100vh;
+  }
+
+  .hero__text {
+    padding-block: clamp(2.625rem, -2.3036rem + 10.2679vw, 6.9375rem);
   }
 
   .hero__img-container {
     position: absolute;
     right: 0;
-    transform: translate(48%, -10%);
+    transform: translate(49%, -11%);
   }
 
   .courses {
@@ -280,11 +287,10 @@ body {
 @media screen and (min-width: 64em) {
   .hero {
     gap: var(--space-400);
-    max-height: 43rem;
   }
 
   .hero__img-container {
-    transform: translate(45%, -13%);
+    transform: translate(47.5%, -10%);
   }
 
   .btn {
